se añade version titulo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <HEAD>
-        <h1>Prueba Git</h1>
+        <h1>Prueba Git 2F</h1>
     </HEAD>
     <body>
         <P> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
