--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <br><br>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             
-            
+            edicion de RosexWolf ¯\_(ツ)_/¯ - (งツ)ว - ʕ •́؈•̀ ₎ - (⊃｡•́‿•̀｡)⊃ - ʕ•ᴥ•ʔ - ƪ(o.o)ƪ
 
 
 
