--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eos aliquam error.
           
             <br><br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            <span>Ipsum dolor sit amet consectetur adipisicing elit. </span>
            
 
 
