--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <br><br>
 
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eos aliquam error.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eos aliquam error. Este es un cambio generico al documento de mi compañera.
             
         </P>
     </body>
